--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-apexcharts": "^1.5.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
   "devDependencies": {
