--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-apexcharts": "^1.6.0",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.1.1",
     "redux": "^5.0.1"
   },
   "devDependencies": {
