--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.6.0",
     "react-bootstrap": "^2.10.5",
